# robot-lab

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  pytest.ini
.bmad_output/: project-context.md
.bmad_output/implementation-artifacts/: 1-1-plugin-registry-infrastructure.md  1-2-consolidated-experiment-metadata-schema.md  1-3-atomic-model-vecnorm-checkpointing.md  1-4-results-index-experiment-summary-template.md  1-5-end-to-end-training-pipeline-smoke-test.md  2-1-actionfilterwrapper-scaffold.md  2-2-smoothness-metric-plugin.md  2-3-video-render-pipeline.md  sprint-status.yaml
.bmad_output/planning-artifacts/: architecture.md  epics.md  prd-validation-report-v2.md  prd-validation-report.md  prd.md
.github/: copilot-instructions.md
.github/skills/test-robot-lab/: SKILL.md
data/debug/: README.md  train_cartpole_ppo.json  train_halfcheetah_sac.json  train_mountaincar_sac.json  train_walker2d_sac.json  visualize_cartpole_ppo.json  visualize_halfcheetah_sac.json  visualize_mountaincar_sac.json  visualize_walker2d_sac.json
docs/general/: adding_environments.md  environment_registry.md  experiment_schema.md  getting_started.md  metadata_system.md
docs/setup/: GPU_SETUP.md  verify_gpu_setup.py
docs/user/: PLAN.md  TODO.md  USER_SKILL.md
examples/: README.md  track_control_params.py
experiments/: README.md
experiments/0_foundations/: 001_smooth_locomotion.md
experiments/0_foundations/configs/: smooth_locomotion_experiments.yaml
robot_lab/: __init__.py  cli.py  config.py  training.py  visualization.py  wrappers.py
robot_lab/configs/: a1quadruped_sac.json  builtin_envs.json  custom_envs.json  default.json  default_ppo.json  default_sac.json  halfcheetah_sac.json  mountaincarcontinuous_sac.json  pusher_sac.json  walker2d_sac.json
robot_lab/envs/: __init__.py  registry.py
robot_lab/envs/locomotion/: __init__.py  quadruped.py  simple_quadruped.xml
robot_lab/envs/manipulation/: __init__.py  gripper.py
robot_lab/experiments/: __init__.py  ai_planner.py  results_db.py  runner.py  schemas.py  spec_templates.py  tracker.py
robot_lab/experiments/plugins/: __init__.py  base.py  (+1 more)
robot_lab/utils/: __init__.py  callbacks.py  debug_config.py  logger.py  metadata.py  mujoco_config.py  paths.py  run_selector.py  run_utils.py  smoothness_metrics.py
tests/: README.md  __init__.py  conftest.py  test_callbacks.py  test_env_registry.py  test_plugins.py  test_smoke.py  test_tracker.py  test_training.py  test_wrappers.py  test_yaml_tracking.py
(+1 files in other folders)
